[EMAIL TEMPLATE] fix email frame is too small

--- a/assets/styles/layout.less
+++ b/assets/styles/layout.less
@@ -73,6 +73,7 @@ table {
     max-width: 880px;
 
     .email-frame {
+      width: 100%;
       margin: 0 auto;
       max-width: 800px;
       border: 5px solid #f9f9f9;
